namespace-integration.yaml
 apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: "2023-03-06T08:59:41Z"
  labels:
    kubernetes.io/metadata.name: integration
  name: integration
  resourceVersion: "662633"
  uid: 02bc196a-52ff-4f76-8225-65cbbcff42f0
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
